sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/copyparty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: copyparty
  name: copyparty
  namespace: copyparty
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: copyparty
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: copyparty
    spec:
      containers:
        - name: copyparty
          image: ghcr.io/9001/copyparty-ac:1.18.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3923
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 10
