sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/copyparty/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: copyparty
  name: copyparty
  namespace: copyparty
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3923
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: copyparty
