sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/copyparty/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: copyparty.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
      - copyparty.indigo.dalmura.cloud
      secretName: copyparty-cert
  rules:
  - host: copyparty.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copyparty
            port:
              number: 3923
